--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Derek Onken - CS PhD Candidate</title>
+	<title>Derek Onken - PhD</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
@@ -25,7 +25,7 @@
 	<!-- Header -->
 	<section id="header">
 		<header>
-			<h1 style="display:inline;" id="logo"><a href="#">Derek Onken</a> </h1> PhD Candidate &nbsp;
+			<h1 style="display:inline;" id="logo"><a href="#">Derek Onken</a> </h1> PhD &nbsp;
 				<ul class="icons"  style="display:inline;" >
 <!-- 					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li> -->
 					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li>
@@ -61,9 +61,9 @@
 					<h3>About</h3>
 
 					
-					<p>I'm Derek Onken, a PhD Candidate in the Computer Science and Informatics Program at Emory University. I focus on data-intensive problems predominantly in the overlap of mathematics and computer science. Ultimately, I enjoy applying the theory to develop solutions for practical problems.</p>
+					<p>I'm Derek Onken, a data scientist and machine learning researcher. I focus on data-intensive problems predominantly in the overlap of mathematics and computer science. Ultimately, I enjoy applying the theory to develop solutions for practical problems.</p>
 
-                    <p>(Such approaches include the following buzzwords: machine learning, deep learning, neural networks, big data, statistical analysis, GPUs, numerical optimization, continuous normalizing flows, optimal control)</p>
+                    <p>(Such approaches include the following buzzwords: deep learning, neural networks, big data, statistical analysis, GPUs, numerical optimization, continuous normalizing flows, optimal control)</p>
 					<!--My strengths lie in mathematical approaches to data analysis which tends to encompass statistical analysis and machine learning methodologies.-->
 
 
@@ -77,7 +77,7 @@
 					<h3>Education</h3>
 					<ul style="list-style:none;">
 						<li style="margin-bottom: 20px;">
-							<p><b>Doctor of Philosophy - Emory University (2016-Present)</b> <br/> Computer Science & Informatics track </p>
+							<p><b>Doctor of Philosophy - Emory University (2016-2021)</b> <br/> Computer Science & Informatics track </p>
 						</li>
 						<li style="margin-bottom: 20px;">
 							<p><b>Master of Science - Emory University (2019)</b> <br/> Computer Science </p>
@@ -99,7 +99,7 @@
 					<h3> Research </h3>
 						<p> <b> PDE-based Machine Learning with <a href="http://www.mathcs.emory.edu/~lruthot/" target="_blank"> Lars Ruthotto </a>.</b> (2018 - present)
 						<br/>
-                        Applying knowledge of optimizers and partial differential equation solvers to machine learning architectures (also known as neural differential equations). More specifically, we explore higher-order schemes, applications of optimal control, and the Discretize-Optimize approach . We also are interested in developing methods for lowering computational cost of continuous normalizing flows and tractably solving high-dimensional optimal control problems.
+                        Applying knowledge of optimizers and partial differential equation solvers to machine learning architectures (also known as neural differential equations). More specifically, we explore higher-order schemes, applications of optimal control, and the Discretize-Optimize approach. We also are interested in developing methods for lowering computational cost of continuous normalizing flows and tractably solving high-dimensional optimal control problems.
 
                         <!-- 
                         (<a href="https://github.com/EmoryMLIP/DynamicBlocks" target="_blank">public code</a>) More specifically, we ask if current reliance on gradient-based methods necessarily results in the most efficient training, question the stability of presented problems and the ability of current architectures to handle ill-posed problems, and view current architectures from a scientific computing perspective.</p> Most current experiments involve applications of higher-order schemes, bound constraints, and the Discretize-Optimize approach.-->
