--- a/fun.html
+++ b/fun.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Derek Onken - CS PhD Candidate</title>
+	<title>Derek Onken - PhD</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
@@ -28,7 +28,7 @@
 	<!-- Header -->
 	<section id="header">
 		<header>
-			<h1 style="display:inline;" id="logo"><a href="./index.html#">Derek Onken</a> </h1> PhD Candidate &nbsp;
+			<h1 style="display:inline;" id="logo"><a href="#">Derek Onken</a> </h1> PhD &nbsp;
 				<ul class="icons"  style="display:inline;" >
 <!-- 					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li> -->
 					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li>
