--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<h3>Education</h3>
 					<ul style="list-style:none;">
 						<li style="margin-bottom: 20px;">
-							<p><b>Doctor of Philosophy - Emory University (2016-2021)</b> <br/> Computer Science & Informatics track </p>
+							<p><b>Doctor of Philosophy - Emory University (2021)</b> <br/> Computer Science & Informatics track </p>
 						</li>
 						<li style="margin-bottom: 20px;">
 							<p><b>Master of Science - Emory University (2019)</b> <br/> Computer Science </p>
@@ -103,12 +103,12 @@
 
                         <!-- 
                         (<a href="https://github.com/EmoryMLIP/DynamicBlocks" target="_blank">public code</a>) More specifically, we ask if current reliance on gradient-based methods necessarily results in the most efficient training, question the stability of presented problems and the ability of current architectures to handle ill-posed problems, and view current architectures from a scientific computing perspective.</p> Most current experiments involve applications of higher-order schemes, bound constraints, and the Discretize-Optimize approach.-->
-						<p> <b> Parkinson's Disease Telemonitoring and Voice Analysis via Mobile App with  Eugene Agichtein </a> as part of his IRLAB</a>.</b> (2017)
+						<p> <b> Parkinson's Disease Telemonitoring and Voice Analysis via Mobile App.</b> (2017)
 						<br/>
 						Collecting and analyzing voice data, touch pressure, and rest tremor to detect Parkinson's disease symptoms via remote patient monitoring. Building machine learning classifier using motor and vocal features extracted from these patients.
 						</p>
 						
-						<p> <b> Using CDR data from H1N1 outbreak to predict future disease outbreaks with Ymir Vigfusson </a></b> (2016-2019)
+						<p> <b> Using CDR data from H1N1 outbreak to predict future disease outbreaks </b> (2016-2019)
 
 						<br/>
 						Our dataset contians cellphone data from the H1N1 outbreak in 2009-2010 and linked health data. We develop a classifier to determine/predict sickness based on human behavior changes around Date of Diagnosis. Motivation: give health officials a more real-time and accurate estimation of sick individuals as an outbreak is occuring.
@@ -133,7 +133,7 @@
 						 <a href="https://imgur.com/a/eWr6sUb" target="_blank">videos</a>
 						</br> 
 						D Onken, L Nurbekyan, X Li, S Wu Fung, S Osher, L Ruthotto.
-						A Neural Network Approach Applied to Multi-Agent Optimal Control. European Control Conference 2021 [Accepted].</br> 
+						A Neural Network Approach Applied to Multi-Agent Optimal Control. European Control Conference 2021.</br> 
 						 <a href="https://arxiv.org/abs/2011.04757" target="_blank">paper</a> &nbsp;
 						 <a href="https://github.com/donken/NeuralOC" target="_blank">code</a> &nbsp;
 						 <a href="https://imgur.com/a/HWqlIot" target="_blank">videos</a>
@@ -177,10 +177,10 @@
 
                        	<br><br>
                        	<h4> OT-Flow: Fast and Accurate Continuous Normalizing Flows via Optimal Transport @ </h4>
-                       	Georgia Scientific Computing Symposium, Feb 2021, poster
+                       	AAAI Conference on Artificial Intelligence, Feb 2021, <a href="./aaaivideo.html" target="_blank">talk</a> &nbsp; <a href="./2021AAAIslides.pdf" target="_blank">slides</a> &nbsp; <a href="./2021AAAIPoster.pdf" target="_blank">poster</a>
+                       	</br> &nbsp; &nbsp; <font size="-1"> Thanks to the AAAI organizers for the opportunity. </font>
+                       	</br>Georgia Scientific Computing Symposium, Feb 2021, poster
                        	</br> &nbsp; &nbsp; <font size="-1"> Thanks to the organizers at UGA for the opportunity. </font>
-                        </br>AAAI Conference on Artificial Intelligence, Feb 2021, <a href="./aaaivideo.html" target="_blank">talk</a> &nbsp; <a href="./2021AAAIslides.pdf" target="_blank">slides</a> &nbsp; <a href="./2021AAAIPoster.pdf" target="_blank">poster</a>
-                        </br> &nbsp; &nbsp; <font size="-1"> Thanks to the AAAI organizers for the opportunity. </font>
                         </br> SIAM Annual Meeting, Jul 2020, poster
                         </br> &nbsp; &nbsp; <font size="-1"> Thanks to the SIAM AN20 organizers for the opportunity. </font>
 
@@ -233,16 +233,7 @@
 				<div class="container">
 				<h3> &nbsp; </h3>
 					<h3>Contact Me</h3>
-					<p> <b> Office:</b>
-					<br/> W302
-					<br/>
-					<br/><b>Address:</b>
-					<br/> 400 Dowman Drive
-					<br/> Department of Mathematics and Computer Science
-					<br/>Emory University
-					<br/>Atlanta, GA 30322
-					<br/>
-					<br/><b>Email:</b><br/>derek [at] derekonken [dot] com</p>
+					<br/><b>Email: </b>  derek [at] derekonken [dot] com</p>
 					
 				</div>
 			</section>
