--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 					<h3>Education</h3>
 					<ul style="list-style:none;">
 						<li style="margin-bottom: 20px;">
-							<p><b>Doctor of Philosophy - Emory University (2021)</b> <br/> Computer Science & Informatics track </p>
+							<p><b>Doctor of Philosophy - Emory University</b> <br/> Computer Science & Informatics track </p>
 						</li>
 						<li style="margin-bottom: 20px;">
-							<p><b>Master of Science - Emory University (2019)</b> <br/> Computer Science </p>
+							<p><b>Master of Science - Emory University</b> <br/> Computer Science </p>
 						</li>
 						<li style="margin-bottom: 20px;">
-							<p><b>Bachelor of Science - University of Georgia  (2015)</b>
+							<p><b>Bachelor of Science - University of Georgia</b>
 							<br/> Majors: Mathematics and Computer Science 
 							<br/> Minors: Physics and Classical Culture </p>
 						</li>
@@ -97,7 +97,11 @@
 				<div class="container">
 					<h3> &nbsp; </h3>
 					<h3> Research </h3>
-						<p> <b> PDE-based Machine Learning with <a href="http://www.mathcs.emory.edu/~lruthot/" target="_blank"> Lars Ruthotto </a>.</b> (2018 - present)
+						<p> <b> Machine Learning for Pharmaceutical Applications .</b> (2021 - present)
+						<br/>
+                        Designing and Implementing machine learning tools for manufacturing and clinical trials use cases.
+						
+                        <p> <b> PDE-based Machine Learning with <a href="http://www.mathcs.emory.edu/~lruthot/" target="_blank"> Lars Ruthotto </a>.</b> (2018 - 2021)
 						<br/>
                         Applying knowledge of optimizers and partial differential equation solvers to machine learning architectures (also known as neural differential equations). More specifically, we explore higher-order schemes, applications of optimal control, and the Discretize-Optimize approach. We also are interested in developing methods for lowering computational cost of continuous normalizing flows and tractably solving high-dimensional optimal control problems.
 
@@ -127,7 +131,7 @@
 						<b>
 						<h3> Publications/Preprints</h3>
 						D Onken, L Nurbekyan, X Li, S Wu Fung, S Osher, L Ruthotto.
-						A Neural Network Approach for High-Dimensional Optimal Control. arXiv 2021</br> 
+						A Neural Network Approach for High-Dimensional Optimal Control Applied to Multi-Agent Path Finding. IEEE TCST 2022.</br> 
 						 <a href="https://arxiv.org/abs/2104.03270" target="_blank">paper</a> &nbsp;
 						 <a href="https://github.com/donken/NeuralOC" target="_blank">code</a> &nbsp;
 						 <a href="https://imgur.com/a/eWr6sUb" target="_blank">videos</a>
