--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<h3> Research </h3>
 						<p> <b> Machine Learning for Pharmaceutical Applications .</b> (2021 - present)
 						<br/>
-                        Designing and Implementing machine learning tools for manufacturing and clinical trials use cases.
+                        Designing and implementing machine learning tools for manufacturing and clinical trials use cases.
 						
                         <p> <b> PDE-based Machine Learning with <a href="http://www.mathcs.emory.edu/~lruthot/" target="_blank"> Lars Ruthotto </a>.</b> (2018 - 2021)
 						<br/>
@@ -173,13 +173,13 @@
                        	</br> Virtual Informal Systems Seminar (VISS) at Centre for Intelligent Machines (CIM) at McGill and the Groupe d'études et de Recherche en Analyse des Décisions (GERAD), Feb 2021, <a href="https://www.youtube.com/watch?v=ueatPJkzqmE&ab_channel=GERADRecherche" target="_blank">talk</a>  &nbsp; <a href="./VISS2021.pdf" target="_blank">slides</a> &nbsp; <a href="https://www.gerad.ca/en/events/1863" target="_blank">abstract</a>
                        	</br> &nbsp; &nbsp; <font size="-1">Thanks to Peter E. Caines, Aditya Mahajan, Shuang Gao, Rinel Foguen Tchuendom, and Yaroslav Salii for the invitation. </font>
                        	
-                       	<br><br>
+                       	<br><br><br>
                        	<h6> A Neural Network Approach Applied to Multi-Agent Optimal Control @ </h6>
                        	European Control Conference, Jun 2021, <a href="./ecc2021.html" target="_blank">talk</a>
                        	</br> &nbsp; &nbsp; <font size="-1">Thanks to the ECC organizers for the opportunity. </font>
 
 
-                       	<br><br>
+                       	<br><br><br>
                        	<h4> OT-Flow: Fast and Accurate Continuous Normalizing Flows via Optimal Transport @ </h4>
                        	AAAI Conference on Artificial Intelligence, Feb 2021, <a href="./aaaivideo.html" target="_blank">talk</a> &nbsp; <a href="./2021AAAIslides.pdf" target="_blank">slides</a> &nbsp; <a href="./2021AAAIPoster.pdf" target="_blank">poster</a>
                        	</br> &nbsp; &nbsp; <font size="-1"> Thanks to the AAAI organizers for the opportunity. </font>
@@ -188,7 +188,7 @@
                         </br> SIAM Annual Meeting, Jul 2020, poster
                         </br> &nbsp; &nbsp; <font size="-1"> Thanks to the SIAM AN20 organizers for the opportunity. </font>
 
-                        <br><br>
+                        <br><br><br>
                         <h4> Discretize-Optimize Methods for Neural ODEs in Continuous Normalizing Flows @ </h4>
                         SIAM Mathematics of Data Science, Jun 2020, <a href="./2020SIAMMDSslides.pdf" target="_blank">slides</a>
                         </br> &nbsp; &nbsp; <font size="-1"> Thanks to Harbir Antil, Thomas Brown, and Ratna Khatri for the invitation.  </font>
