updated google tag

--- a/ecc2021.html
+++ b/ecc2021.html
@@ -18,13 +18,18 @@
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DK3ST29H56"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-
+  gtag('config', 'G-DK3ST29H56');
+</script>
 
 
 <body>
-
-
 	<!-- Header -->
 	<section id="header">
 		<header>
@@ -93,15 +98,6 @@
 	</script>
 
 	
-
-         <!-- Global site tag (gtag.js) - Google Analytics -->                                                                                   
-         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114140841-1"></script>
-         <script>
-                 window.dataLayer = window.dataLayer || [];
-                 function gtag(){dataLayer.push(arguments);}
-         gtag('js', new Date());
-         gtag('config', 'UA-114140841-1');
-         </script>
 
 
 </body>
