--- a/index.html
+++ b/index.html
@@ -20,8 +20,19 @@
 
 </head>
 
-<body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DK3ST29H56"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-DK3ST29H56');
+</script>
+
+
+
+<body>
 	<!-- Header -->
 	<section id="header">
 		<header>
@@ -279,21 +290,6 @@
 		</section>
 
 	</div>
-
-	<!-- Scripts -->
-	
-
-
-
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114140841-1"></script>
-	<script>
-  		window.dataLayer = window.dataLayer || [];
-    		function gtag(){dataLayer.push(arguments);}
-      	gtag('js', new Date());
-        gtag('config', 'UA-114140841-1');
-	</script>
-
 
 </body>
 
