give links discrenible names

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 -->
 <html>
 
+<meta name="description" content="REsearch information about scientist Dr. Derek Onken">
+
 <head>
 	<title>Derek Onken - PhD</title>
 	<meta charset="utf-8" />
@@ -38,10 +40,9 @@
 		<header>
 			<h1 style="display:inline;" id="logo"><a href="#">Derek Onken</a> </h1> PhD &nbsp;
 				<ul class="icons"  style="display:inline;" >
-<!-- 					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li> -->
-					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li>
-                    <li><a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar" style="font-size: 1.1em;" target="_blank"></a></li>
-					<li><a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.1em;" target="_blank"><span class="label">Github</span></a></li>
+					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank" aria-label="link to Linkedin profile"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar" style="font-size: 1.1em;" target="_blank" aria-label="link to Google Scholar profile"></a></li>
+					<li><a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.1em;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span></a></li>
 				</ul>
 		</header>
 		<nav id="nav">
