avif profile picture

--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
 				<div class="container">
 
 
-					<img align="right" src="images/gallery/OnkenProfile.png" alt="OnkenProfile" width=30% style="max-width:250px; margin:10px" >
+<!-- 					<img align="right" src="images/gallery/OnkenProfile.png" alt="OnkenProfile" width=30% style="max-width:250px; margin:10px" > -->
+					<picture>
+      					<source type="image/avif" srcset="images/gallery/OnkenProfile.avif" />
+      					<img align="right" src="images/gallery/OnkenProfile.png" alt="OnkenProfile" width=30% style="max-width:250px; margin:10px" >
+    				</picture>
 
 					<h3>About</h3>
 
@@ -238,7 +242,17 @@
                         Your browser does not support the video tag.
                     </video>
                     <div style="width:80%; text-align:center; max-width:640px;" >  <b> Promotional video from United Health Group (Summer 2019)</b></div>
-                 
+ 
+
+
+<!-- 					<div class="video">
+                    	<img src="2023_FDA_DHT_poster.png">
+						                 		<iframe width="720" height="405" src="https://www.youtube.com/embed/DCF7iCMkWC8?start=7000" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div> 
+                    <div style="width:80%; text-align:center; max-width:640px;" >  <b> FDA Duke Margolis Digital Health Technologies 2023 </b> <a href="https://healthpolicy.duke.edu/sites/default/files/2023-04/Day1_Slide_Deck_20230420.pdf" target="_blank">slides</a> </div>
+-->
+                                       
+
                         <!-- <iframe allowfullscreen webkitallowfullscreen mozallowfullscreen id='iframe' src='http://www.oculu.com/im4/im_embed.php?id=1556919860&title=WF637180_CollegeProgram_Optum_DerekO_Final' scrolling='no' frameborder='0' height='100%' width='100%'></iframe> -->
                 </div> 
 
