update html best practices

--- a/aaaivideo.html
+++ b/aaaivideo.html
@@ -1,10 +1,5 @@
-<!DOCTYPE HTML
-<!-e
-	Read Only by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
 
 <head>
 	<title>Derek Onken - PhD</title>
