--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE HTML
-<!--e
-	Read Only by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
 
 <meta name="description" content="REsearch information about scientist Dr. Derek Onken">
 
@@ -181,7 +176,7 @@
 						<b>
 						<h3>Presentations</h3>
                        
-                       	<h6> A Neural Network Approach for High-Dimensional Optimal Control @ </h6>
+                       	<h4> A Neural Network Approach for High-Dimensional Optimal Control @ </h4>
                        	Optimal Transport and Mean Field Games Seminar, University of South Carolina, Mar 2021, talk
                        	</br> &nbsp; &nbsp; <font size="-1">Thanks to Wuchen Li for the invitation. </font>
                        	</br>UCLA Applied Mathematics Seminar, Mar 2021, talk
