topbar on mobile

--- a/fun.html
+++ b/fun.html
@@ -1,16 +1,20 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
+<meta name="description" content="Research information about scientist Dr. Derek Onken">
+
 <head>
 	<title>Derek Onken - PhD</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-	
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->	
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/unslider.css">
 	<link rel="stylesheet" href="assets/css/unslider-dots.css">
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -23,25 +27,20 @@
   gtag('config', 'G-DK3ST29H56');
 </script>
 
-
-
 <body>
-
-
 	<!-- Header -->
 	<section id="header">
 		<header>
-			<h1 style="display:inline;" id="logo"><a href="#">Derek Onken</a> </h1> PhD &nbsp;
+			<h1 style="display:inline;" id="logo"><a href="./index.html">Derek Onken</a> </h1> PhD &nbsp;
 				<ul class="icons"  style="display:inline;" >
-<!-- 					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li> -->
-					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li>
-                    <li><a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar" style="font-size: 1.1em;" target="_blank"></a></li>
-					<li><a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.1em;" target="_blank"><span class="label">Github</span></a></li>
+					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank" aria-label="link to Linkedin profile"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar" style="font-size: 1.1em;" target="_blank" aria-label="link to Google Scholar profile"></a></li>
+					<li><a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.1em;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span></a></li>
 				</ul>
 		</header>
 		<nav id="nav">
 			<ul>
-				<li><a href="./index.html#one" class="active">About</a></li>
+<!--				<li><a href="#one" class="active">About</a></li>-->
 				<li><a href="./index.html#two">Research</a></li>
 				<!--<li><a href="#three">Teaching</a></li>-->
 				<li><a href="./index.html#four">Contact</a></li>
@@ -63,7 +62,6 @@
 
 					<h3> <b> FUN LINKS !!!!!! </b> </h3>
 
-                    
     				<div class="my-slider" align="right"  style="font-size:20px; overflow: hidden;" >
     						<ul>
     							<li>
@@ -142,13 +140,6 @@
                     </br> Life advice from others:
                     </br> <a href="https://an.athletenetwork.com/blog/8-hard-lessons-i-learned-as-a-rower">Lessons from sport and STEM</a>
                     </br> <a href="https://www.linkedin.com/pulse/why-hire-swimmer-who-swam-all-four-years-college-ben-fisher/">Why hire a swimmer</a>
-<!-- 					</br>
-					</br>
-					</br>
-                    </br> Some Research Presentations/Materials:
-                    </br> <a href="./OnkenPresentation.pdf">Emory Scientific Computing Seminar, Apr 2019, slides</a>
-                    </br> <a href="./2019HORKNetPoster.pdf">Georgia Scientific Computing Symposium, Feb 2019, poster</a>
-                    </br> <a href="./2017AmazonPoster.pdf">Amazon Graduate Research Symposium, Oct 2017, poster</a> -->
 
 <!-- 					</br>
 					<h4> <b>My Current Unofficial Positions: </b> </h4>
