update optum poster

--- a/fun.html
+++ b/fun.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->	
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/main.css">
 	<link rel="stylesheet" href="assets/css/unslider.css">
 	<link rel="stylesheet" href="assets/css/unslider-dots.css">
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
@@ -170,6 +170,16 @@
 
 	<!-- Scripts -->
 	
+
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/jquery.dropotron.min.js"></script>
+
+
 	<script src="assets/js/jquery.min.js"></script>	
 	<script src="assets/js/unslider-min.js"></script>
 	<script>
