--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/unslider.css">
-	<link rel="stylesheet" href="assets/css/unslider-dots.css">
+
+
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
 </head>
 
-<!-- Google tag (gtag.js) -->
+<!-- <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DK3ST29H56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -25,7 +25,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-DK3ST29H56');
-</script>
+</script> -->
 
 <body>
 	<!-- Header -->
@@ -243,7 +243,8 @@
 					<p>Fall 2016:</p>
 					<p style="padding-left: 20px"> <b>TA for Dr. Davide Fossati's Intro to Java (CS170) </b> </p>
 
-                    <video width="80%" style="max-width:640px;" controls controlsList="nodownload" poster="optum_video_poster.png">
+
+                    <video width="80%" style="max-width:640px;" controls controlsList="nodownload" poster="./images/optum_video_poster.avif">
                         <source src="derek_optum.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
