fixed unslider not working

--- a/ecc2021.html
+++ b/ecc2021.html
@@ -1,4 +1,9 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML
+<!-e
+	Read Only by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html lang="en">
 
 <head>
@@ -6,10 +11,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-	
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/unslider.css">
-	<link rel="stylesheet" href="assets/css/unslider-dots.css">
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
 </head>
 
@@ -28,17 +30,16 @@
 	<!-- Header -->
 	<section id="header">
 		<header>
-			<h1 style="display:inline;" id="logo"><a href="#">Derek Onken</a> </h1> PhD &nbsp;
+			<h1 style="display:inline;" id="logo"><a href="./index.html">Derek Onken</a> </h1> PhD &nbsp;
 				<ul class="icons"  style="display:inline;" >
-<!-- 					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li> -->
-					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li>
-                    <li><a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar" style="font-size: 1.1em;" target="_blank"></a></li>
-					<li><a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.1em;" target="_blank"><span class="label">Github</span></a></li>
+					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank" aria-label="link to Linkedin profile"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar" style="font-size: 1.1em;" target="_blank" aria-label="link to Google Scholar profile"></a></li>
+					<li><a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.1em;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span></a></li>
 				</ul>
 		</header>
 		<nav id="nav">
 			<ul>
-				<li><a href="./index.html#one" class="active">About</a></li>
+<!--				<li><a href="#one" class="active">About</a></li>-->
 				<li><a href="./index.html#two">Research</a></li>
 				<!--<li><a href="#three">Teaching</a></li>-->
 				<li><a href="./index.html#four">Contact</a></li>
