--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML
+<!-e
+	Read Only by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html lang="en">
 
 <meta name="description" content="Research information about scientist Dr. Derek Onken">
@@ -10,8 +15,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="assets/css/main.css" />
-
-
+	<link rel="stylesheet" href="assets/css/unslider.css">
+	<link rel="stylesheet" href="assets/css/unslider-dots.css">
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
@@ -76,11 +81,10 @@
                     <p>(Such approaches include the following buzzwords: deep learning, neural networks, big data, statistical analysis, GPUs, numerical optimization, continuous normalizing flows, optimal control)</p>
 					<!--My strengths lie in mathematical approaches to data analysis which tends to encompass statistical analysis and machine learning methodologies.-->
 
-
 				</div>
 			</section>
 
-			
+		
 			<section id="one-and-a-half">
 				<div class="container">
 					<h3> &nbsp; </h3>
@@ -105,7 +109,7 @@
 			<!-- Two -->
 			<section id="two">
 				<div class="container">
-					<h3> &nbsp; </h3>
+					<br/>
 					<h3> Research </h3>
 					<ul style="list-style:none;">
 						<li style="margin-bottom: 20px;"> <b> Machine Learning for Pharmaceutical Applications .</b> (2021 - present)
