--- a/fun.html
+++ b/fun.html
@@ -1,4 +1,9 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML
+<!-e
+	Read Only by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html lang="en">
 
 <meta name="description" content="Research information about scientist Dr. Derek Onken">
@@ -8,24 +13,15 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->	
-	<link rel="stylesheet" href="assets/css/main.css">
+	
+	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/unslider.css">
 	<link rel="stylesheet" href="assets/css/unslider-dots.css">
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
-	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
 </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DK3ST29H56"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-DK3ST29H56');
-</script>
 
 <body>
 	<!-- Header -->
@@ -141,12 +137,6 @@
                     </br> <a href="https://an.athletenetwork.com/blog/8-hard-lessons-i-learned-as-a-rower">Lessons from sport and STEM</a>
                     </br> <a href="https://www.linkedin.com/pulse/why-hire-swimmer-who-swam-all-four-years-college-ben-fisher/">Why hire a swimmer</a>
 
-<!-- 					</br>
-					<h4> <b>My Current Unofficial Positions: </b> </h4>
-					</br> Local Direction-Giver
-					</br> Emory Math & Science Building's Daylight Savings Clock Adjuster
-					</br> Pet Snapchatter
-					</br> Encourager of Eating food -->
 				</div>
 			</section>
 
@@ -170,16 +160,6 @@
 
 	<!-- Scripts -->
 	
-
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/skel.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="assets/js/main.js"></script>
-	<script src="assets/js/jquery.dropotron.min.js"></script>
-
-
 	<script src="assets/js/jquery.min.js"></script>	
 	<script src="assets/js/unslider-min.js"></script>
 	<script>
@@ -193,6 +173,15 @@
 			});
 
 	});
+	</script>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-DK3ST29H56"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'G-DK3ST29H56');
 	</script>
 
 </body>
