optimizing for https://pagespeed.web.dev/

--- a/fun.html
+++ b/fun.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML
-<!-e
-	Read Only by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html lang="en">
 
 <meta name="description" content="Research information about scientist Dr. Derek Onken">
@@ -12,7 +7,7 @@
 	<title>Derek Onken - PhD</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"> -->
 	
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/unslider.css">
