--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML
-<!-e
-	Read Only by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html lang="en">
 
 <meta name="description" content="Research information about scientist Dr. Derek Onken">
@@ -12,11 +7,10 @@
 	<title>Derek Onken - PhD</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"> -->
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/unslider.css">
-	<link rel="stylesheet" href="assets/css/unslider-dots.css">
+
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
@@ -72,7 +66,7 @@
       					<img align="right" src="images/gallery/OnkenProfile.png" alt="OnkenProfile" width=30% style="max-width:250px; margin:10px" >
     				</picture>
 
-					<h3>About</h3>
+					<h2>About</h2>
 
 
 					<p>I'm Derek Onken, a data scientist and machine learning researcher. I focus on data-intensive problems predominantly in the overlap of mathematics and computer science. Ultimately, I enjoy applying the theory to develop solutions for practical problems.</p>
@@ -87,8 +81,8 @@
 		
 			<section id="one-and-a-half">
 				<div class="container">
-					<h3> &nbsp; </h3>
-					<h3>Education</h3>
+					<h2> &nbsp; </h2>
+					<h2>Education</h2>
 					<ul style="list-style:none;">
 						<li style="margin-bottom: 20px;">
 							<p><b>Doctor of Philosophy - Emory University</b> <br/> Computer Science & Informatics track </p>
@@ -110,7 +104,7 @@
 			<section id="two">
 				<div class="container">
 					<br/>
-					<h3> Research </h3>
+					<h2> Research </h2>
 					<ul style="list-style:none;">
 						<li style="margin-bottom: 20px;"> <b> Machine Learning for Pharmaceutical Applications .</b> (2021 - present)
 						<br/>
