speedup load time

--- a/aaaivideo.html
+++ b/aaaivideo.html
@@ -10,18 +10,6 @@
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
 </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DK3ST29H56"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-DK3ST29H56');
-</script>
-
-
-
 <body>
 	<!-- Header -->
 	<section id="header">
@@ -76,23 +64,15 @@
 
 	</div>
 
-	<!-- Scripts -->
-	
-	<script src="assets/js/jquery.min.js"></script>	
-	<script src="assets/js/unslider-min.js"></script>
-	<script>
-	
-		jQuery(document).ready(function ($) {
-			$('.my-slider').unslider({
-				animation: 'fade',
-				autoplay: true,
-				arrows: false,
-				delay: 5000
-			});
+<!-- <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DK3ST29H56"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-	});
-	</script>
-
+  gtag('config', 'G-DK3ST29H56');
+</script> -->
 
 </body>
 
