--- a/aaaivideo.html
+++ b/aaaivideo.html
@@ -64,7 +64,9 @@
 
 	</div>
 
-<!-- <!-- Google tag (gtag.js) -->
+</body>
+
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DK3ST29H56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -72,8 +74,6 @@
   gtag('js', new Date());
 
   gtag('config', 'G-DK3ST29H56');
-</script> -->
-
-</body>
+</script>
 
 </html>
