--- a/index.html
+++ b/index.html
@@ -297,17 +297,15 @@
 
 	</div>
 
-<!-- <!-- Google tag (gtag.js) -->
+</body>
+
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DK3ST29H56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-DK3ST29H56');
-</script> -->
-
-
-</body>
+</script>
 
 </html>
