update lars link

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         </li>
 						
                         <li style="margin-bottom: 20px;">
-                        <b> PDE-based Machine Learning with <a href="http://www.mathcs.emory.edu/~lruthot/" target="_blank"> Lars Ruthotto </a>.</b> (2018 - 2021)
+                        <b> PDE-based Machine Learning with <a href="http://www.math.emory.edu/~lruthot/" target="_blank"> Lars Ruthotto </a>.</b> (2018 - 2021)
 						<br/>
                         Applying knowledge of optimizers and partial differential equation solvers to machine learning architectures (also known as neural differential equations). More specifically, we explore higher-order schemes, applications of optimal control, and the Discretize-Optimize approach. We also are interested in developing methods for lowering computational cost of continuous normalizing flows and tractably solving high-dimensional optimal control problems.
 						</li>
