resizing unslider in fun links

--- a/fun.html
+++ b/fun.html
@@ -129,8 +129,9 @@
                     </br>
                     </br>
                     </br> Life advice from others:
-                    </br> <a href="https://an.athletenetwork.com/blog/8-hard-lessons-i-learned-as-a-rower">Lessons from sport and STEM</a>
-                    </br> <a href="https://www.linkedin.com/pulse/why-hire-swimmer-who-swam-all-four-years-college-ben-fisher/">Why hire a swimmer</a>
+                    <!-- </br> <a href="https://an.athletenetwork.com/blog/8-hard-lessons-i-learned-as-a-rower">Lessons from sport and STEM</a> -->
+                    </br> <a href="./8LessonsFromRowingSTEM.htm" target="_blank">Lessons from sport and STEM</a>
+                    </br> <a href="https://www.linkedin.com/pulse/why-hire-swimmer-who-swam-all-four-years-college-ben-fisher/" target="_blank">Why hire a swimmer</a>
 
 				</div>
 			</section>
