added maui derm poster

--- a/index.html
+++ b/index.html
@@ -199,6 +199,10 @@
 
                         <br>
                         <h4> Other </h4>
+                        <p style="padding-left: 20px">  The Capture of Fingernail and Scalp Psoriasis Pictures Through a Mobile Application in a Real-World Ixekizumab Observation Study at Maui Derm, Jan 2024, 
+                        	<!-- <a href="./2024MauiDermPoster.pdf" target="_blank">poster</a> </p> -->
+                        	<!-- https://assets.ctfassets.net/mpejy6umgthp/72f2j6BJyJOJQv3EjNcmcX/8ade0af27b9eaca562bc6f9a5296bd4e/Shannon_Maui_Derm_2024.pdf -->
+                        	<a href="https://lillyscience.lilly.com/download/4MqLqTTV0ET3BVrXtFsB9I" target="_blank">poster</a> </p>
 		                <p style="padding-left: 20px">  Deep Learning in Medical Applications Workshop at Institute for Pure and Applied Mathematics (IPAM), Jan 2020, <a href="./2020LungCancerPoster.pdf" target="_blank">poster</a> </p>
 		                <p style="padding-left: 40px"> <font size="-1"> Thanks to the IPAM organizers for the opportunity.  </font> </p>
 	                    <p style="padding-left: 20px"> Emory Scientific Computing Seminar, Apr 2019, <a href="./OnkenPresentation.pdf" target="_blank">slides</a> </p>
