--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
+	<link rel="icon" href="images/DinO.png"> <!-- browser tab icon -->
+
 </head>
 
 
