--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
-	<link rel="icon" href="images/DinO.png"> <!-- browser tab icon -->
+	<link rel="icon" href="images/DinO.ico"> <!-- browser tab icon -->
 
 </head>
 
