add icon to other pages and update ECC doi

--- a/aaaivideo.html
+++ b/aaaivideo.html
@@ -5,9 +5,11 @@
 	<title>Derek Onken - PhD</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"> -->
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
+
+	<link rel="icon" href="images/DinO.ico"> <!-- browser tab icon -->
+
 </head>
 
 <body>
