--- a/ecc2021.html
+++ b/ecc2021.html
@@ -5,9 +5,11 @@
 	<title>Derek Onken - PhD</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"> -->
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
+
+	<link rel="icon" href="images/DinO.ico"> <!-- browser tab icon -->
+
 </head>
 
 <body>
@@ -46,7 +48,7 @@
                     <iframe width="720" height="405" src="https://www.youtube.com/embed/YZRg6h_PgIM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div style="width:80%; text-align:center; max-width:640px;" >  <b> European Control Conference, June 2021</b></div>
 					</br> Accompanying Slides <a href="./2021ECCslides.pdf" target="_blank">link</a>
-					</br> Proceedings <a href="https://controls.papercept.net/conferences/conferences/ECC21/program/ECC21_ContentListWeb_2.html#tha4_05" target="_blank">link</a>
+					</br> Proceedings <a href="https://doi.org/10.23919/ECC54610.2021.9655103" target="_blank">link</a>
                     </br>
                     </br> We extend thanks to Reza Karimi for the audio-visual quality
 
