--- a/fun.html
+++ b/fun.html
@@ -14,6 +14,8 @@
 	<link rel="stylesheet" href="assets/css/unslider-dots.css">
 	<link rel="stylesheet" href="assets/css/academicons.min.css"/> <!--google scholar icon-->
 
+	<link rel="icon" href="images/DinO.ico"> <!-- browser tab icon -->
+
 </head>
 
 
@@ -122,9 +124,9 @@
 					</br>
 					</br> Other individuals that have positively influenced my life:
 					</br> <a href="https://www.life.edu/faculty-page/yit-aun-lim-ph-d/" target="_blank"> Dr. Prof. Yit Aun Lim</a>
-					</br> <a href="http://georgiadogs.com/staff.aspx?staff=162" target="_blank">Katrin Koch</a>                
-					</br> <a href="http://georgiadogs.com/staff.aspx?staff=359" target="_blank">Harvey Humphries</a>                   
-					</br> <a href="http://georgiadogs.com/coaches.aspx?rc=161&path=swim" target="_blank">Jack Bauerle</a>
+					</br> <a href="https://georgiadogs.com/staff-directory/katrin-koch/162" target="_blank">Katrin Koch</a>                
+					</br> <a href="https://georgiadogs.com/sports/swimming-and-diving/roster/coaches/harvey-humphries/2456" target="_blank">Harvey Humphries</a>                   
+					</br> <a href="https://georgiadogs.com/sports/swimming-and-diving/roster/coaches/jack-bauerle/161" target="_blank">Jack Bauerle</a>
 					</br> <a href="http://www.stampsfoundation.org/project/decker-onken-georgia-tech/" target="_blank">Decker Onken</a>
 					</br> <a href="https://www.redandblack.com/sports/bulldogs-in-brazil-former-and-current-uga-athletes-competing-at/article_0fc47716-5dae-11e6-8298-fbb2fa9cb77f.html" target="_blank"> My teammates</a> 
 						
