--- a/fun.html
+++ b/fun.html
@@ -37,7 +37,7 @@
 				<li><a href="./index.html#two">Research</a></li>
 				<!--<li><a href="#three">Teaching</a></li>-->
 				<li><a href="./index.html#four">Contact</a></li>
-				<li><a href="./OnkenCV.pdf">CV</a></li>
+				<li><a href="./OnkenCV.pdf" target="_blank">CV</a></li>
 				<li><a href="./fun.html">Fun Links</a></li>
 			</ul>
 		</nav>
